# PE_OrgAIR_CaseStudy5

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  README.md  README_DEPLOYMENT.md  debug_scraper.py  demo_evidence_mapper.py  deploy_cs4.sh  deploy_cs5.sh  docker-compose.gcp.yml  docker-compose.yml  fix_assessment_data.py  prometheus.yml  pyproject.toml  requirements.txt  test_api_key.py  test_check_external_signals.py  test_company_search_debug.py  test_glassdoor_full.py  test_job_scores_one.py  test_job_signals_debug.py  test_nvda_only.py  test_org_air.py  test_rapidapi.py  test_synergy.py  vm_setup_cs5.sh  write_leadership_signals.py
agents/: specialists.py  state.py  supervisor.py
app/: config.py  main.py
dags/: evidence_indexing_dag.py  org_air_scoring_dag.py
dashboard/: app.py  portfolio_view.py
exercises/: agentic_due_diligence.py
mcp/: README.md  __init__.py  server.py
pe_mcp/: __init__.py  http_server.py  server.py
results/: AAPL_glassdoor.json  AAPL_org_air_result.json  ADP_glassdoor.json  ADP_org_air_result.json  AMZN_glassdoor.json  AMZN_org_air_result.json  CAT_glassdoor.json  CAT_org_air_result.json  DE_glassdoor.json  DE_org_air_result.json  DG_glassdoor.json  DG_org_air_result.json  DPA_glassdoor.json  DPA_org_air_result.json  GE_glassdoor.json  GE_org_air_result.json  GOOGL_glassdoor.json  GOOGL_org_air_result.json  GS_glassdoor.json  GS_org_air_result.json  HCA_glassdoor.json  HCA_org_air_result.json  JNJ_glassdoor.json  JNJ_org_air_result.json  JPM_glassdoor.json  JPM_org_air_result.json  META_glassdoor.json  (+15 more)
(+138 files in other folders)
